--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 kagglehub==0.3.12
 kiwisolver==1.4.8
-libxml2-python==2.11.4
+# libxml2-python==2.11.4
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
